--- a/index.html
+++ b/index.html
@@ -1021,20 +1021,18 @@
                 new Chart(satisfactionCtx, {
                     type: 'doughnut',
                     data: {
-                        labels: ['매우 만족', '만족', '보통', '불만족'],
+                        labels: ['매우 만족', '만족', '보통'],
                         datasets: [{
-                            data: [78, 18, 3, 1],
+                            data: [78, 18, 1],
                             backgroundColor: [
                                 'rgba(0, 172, 193, 0.8)',
                                 'rgba(3, 169, 244, 0.8)',
-                                'rgba(156, 163, 175, 0.8)',
-                                'rgba(239, 68, 68, 0.8)'
+                                'rgba(156, 163, 175, 0.8)'
                             ],
                             borderColor: [
                                 'rgb(0, 172, 193)',
                                 'rgb(3, 169, 244)',
-                                'rgb(156, 163, 175)',
-                                'rgb(239, 68, 68)'
+                                'rgb(156, 163, 175)'
                             ],
                             borderWidth: 2
                         }]
