--- a/index.html
+++ b/index.html
@@ -794,8 +794,11 @@
                     <a href="tel:1551-1468" class="bg-yellow-300 text-gray-800 px-10 py-4 rounded-full font-bold text-lg hover:bg-yellow-200 transition-all duration-300 transform hover:scale-105">
                         📞 지금 전화상담
                     </a>
-                    <a href="https://doctorair.imweb.me" target="_blank" class="border-2 border-yellow-300 text-yellow-300 px-10 py-4 rounded-full font-bold text-lg hover:bg-yellow-300 hover:text-gray-800 transition-all duration-300 transform hover:scale-105">
-                        🌐 공식 홈페이지
+                    <a href="https://blog.naver.com/doctorair98" target="_blank" class="border-2 border-yellow-300 text-yellow-300 px-10 py-4 rounded-full font-bold text-lg hover:bg-yellow-300 hover:text-gray-800 transition-all duration-300 transform hover:scale-105">
+                        🌐 공식 블로그
+                    </a>
+					<a href="https://www.instagram.com/doctorair_ceo" target="_blank" class="border-2 border-yellow-300 text-yellow-300 px-10 py-4 rounded-full font-bold text-lg hover:bg-yellow-300 hover:text-gray-800 transition-all duration-300 transform hover:scale-105">
+                        🌐 공식 유투브
                     </a>
                 </div>
             </div>
@@ -811,7 +814,7 @@
                     <div>
                         <div class="text-2xl font-bold gradient-text mb-4">닥터에어</div>
                         <p class="text-gray-400 mb-4">환경엔지니어가 설립한 실내공기관리 전문 회사</p>
-                        <p class="text-sm text-gray-500">Doctor_Air care & cure the air For You</p>
+                        <p class="text-sm text-gray-500">Doctor Air care & cure the air For You</p>
                     </div>
 
                     <!-- Quick Links -->
