--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                         검증된 기술력으로 실내 공기를 정화하다
                     </p>
                     <p class="text-lg md:text-xl mb-12 opacity-80">
-                        Doctor_Air care & cure the air For You
+                        Doctor Air care & cure the air For You
                     </p>
                 </div>
 
