--- a/index.html
+++ b/index.html
@@ -179,19 +179,25 @@
             height: 400px !important;
         }
     </style>
-
+	
     <!-- SEO 메타 태그 -->
     <meta name="description" content="닥터에어는 환경엔지니어가 설립한 실내공기관리 전문 회사입니다. 새집증후군 케어/베이크아웃, 헌집증후군 케어, VOCs/HCHO 제거 설비 제작, 소독 및 탈취 서비스를 제공합니다.">
-    <meta name="keywords" content="새집증후군, 헌집증후군, 베이크아웃, 실내공기정화, VOCs, HCHO, 소독, 탈취, 환경엔지니어, 부산, 닥터에어">
+    <meta name="keywords" content="새집증후군, 헌집증후군, 베이크아웃, 실내공기, 실내공기정화, VOCs, HCHO, 소독, 탈취, 환경엔지니어, 부산, 닥터에어">
     <meta name="author" content="닥터에어">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://doctorair.imweb.me">
+    <link rel="canonical" href="https://www.doctorair.co.kr">
+	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://cdn.imweb.me/thumbnail/20251027/26fad3f79ce0b.png" />
+	<link rel="icon" type="image/png" href="https://cdn.imweb.me/thumbnail/20251027/daa04ab017c71.png" sizes="196x196" />
+	<meta id='meta_og_image' property="og:image" content="https://cdn.imweb.me/upload/S20250402fce3162837a0c/90bc19412ad6d.png" />
+	<meta name="msapplication-TileImage" content="https://cdn.imweb.me/thumbnail/20251027/ba35c74b07b7a.png" />
+	<meta name="msapplication-square310x310logo" content="https://cdn.imweb.me/thumbnail/20251027/7a828ddfff18a.png" />
+	
 
     <!-- Open Graph 태그 -->
     <meta property="og:title" content="닥터에어 | 실내공기관리 전문">
-    <meta property="og:description" content="검증된 기술력으로 실내 공기를 정화하는 전문 업체. 새집증후군부터 헌집증후군까지 완벽 케어.">
+    <meta property="og:description" content="검증된 기술력으로 실내 공기를 정화하는 전문 업체. 새집증후군부터 헌집증후군까지 완벽 케어">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://doctorair.imweb.me">
+    <meta property="og:url" content="https://www.doctorair.co.kr">
     <meta property="og:site_name" content="닥터에어">
     <meta property="og:locale" content="ko_KR">
 
