--- a/index.html
+++ b/index.html
@@ -186,11 +186,11 @@
     <meta name="author" content="닥터에어">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://www.doctorair.co.kr">
-	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://cdn.imweb.me/thumbnail/20251027/26fad3f79ce0b.png" />
-	<link rel="icon" type="image/png" href="https://cdn.imweb.me/thumbnail/20251027/daa04ab017c71.png" sizes="196x196" />
-	<meta id='meta_og_image' property="og:image" content="https://cdn.imweb.me/upload/S20250402fce3162837a0c/90bc19412ad6d.png" />
-	<meta name="msapplication-TileImage" content="https://cdn.imweb.me/thumbnail/20251027/ba35c74b07b7a.png" />
-	<meta name="msapplication-square310x310logo" content="https://cdn.imweb.me/thumbnail/20251027/7a828ddfff18a.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://raw.githubusercontent.com/doctorair98/doctorair98.github.io/refs/heads/main/icon.png" />
+	<link rel="icon" type="image/png" href="https://raw.githubusercontent.com/doctorair98/doctorair98.github.io/refs/heads/main/icon.png" sizes="196x196" />
+	<meta id='meta_og_image' property="og:image" content="https://raw.githubusercontent.com/doctorair98/doctorair98.github.io/refs/heads/main/clean_air_solution.png" />
+	<meta name="msapplication-TileImage" content="https://raw.githubusercontent.com/doctorair98/doctorair98.github.io/refs/heads/main/icon.png" />
+	<meta name="msapplication-square310x310logo" content="https://raw.githubusercontent.com/doctorair98/doctorair98.github.io/refs/heads/main/icon.png" />
 	
 
     <!-- Open Graph 태그 -->
